@@ -56,5 +56,15 @@ for loc in "$LOCALE_FR_UTF8" 'en_US.UTF-8'; do
   esac
 done
 
+# Make sure 'date' can use the format string given by 'locale date_fmt'
+# and that it uses it by default when no format string is given.
+for loc in $(locale -a | shuf -n 10); do
+  fmt=$(LC_ALL=$loc locale date_fmt)
+  if test -n "$fmt"; then
+    LC_ALL=$loc date -d '2025-10-11T13:00' +"$fmt" > $loc.exp || fail=1
+    LC_ALL=$loc date -d '2025-10-11T13:00' > $loc.out || fail=1
+    compare $loc.exp $loc.out || fail=1
+  fi
+done
 
 Exit $fail
