@@ -1,5 +1,5 @@
 #!/bin/sh
-# Ensure we handle i/o errors correctly in csplit via /dev/full
+# Ensure we handle i/o errors correctly in split via /dev/full
 
 # Copyright (C) 2025 Free Software Foundation, Inc.
 
@@ -17,21 +17,23 @@
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 . "${srcdir=.}/tests/init.sh"; path_prepend_ ./src
-print_ver_ csplit
+print_ver_ split
 
-cp -sf /dev/full xx01 || skip_ '/dev/full is required'
+cp -sf /dev/full xaa || skip_ '/dev/full is required'
 
 # Get the wording of the OS-dependent ENOSPC message
 returns_ 1 seq 1 >/dev/full 2>msgt || framework_failure_
 sed 's/seq: write error: //' msgt > msg || framework_failure_
 
 # Create the expected error message
-{ printf "%s" "csplit: xx01: " ; cat msg ; } > exp || framework_failure_
+{ printf "%s" "split: xaa: " ; cat msg ; } > exp || framework_failure_
 
-# the 'csplit' command should fail with exit code 1
-seq 2 | returns_ 1 csplit - 1 2> err || fail=1
-# csplit should cleanup broken files
-test -e xx01 && fail=1
+# the 'split' command should fail with exit code 1
+seq 2 | returns_ 1 split -b 1 2> err || fail=1
+# split does not cleanup broken file (while csplit does)
+test -e xaa || fail=1
+# split should not continue
+test -e xab && fail=1
 
 # Ensure we got the expected error message
 compare exp err || fail=1
