@@ -4,6 +4,13 @@ GNU coreutils NEWS                                    -*- outline -*-
 
 ** Bug fixes
 
+  'date' no longer fails with format directives that return an empty string.
+  [bug introduced in coreutils-9.9]
+
+  'dd seek=N of=FILE' no longer continues copying, overwriting FILE if it
+  exists, if ftruncate fails.
+  [bug introduced in coreutils-9.1]
+
   du and ls no longer modify strings returned by getenv.
   POSIX says this is not portable.
   [bug introduced in fileutils-4.1.6]
@@ -11,6 +18,9 @@ GNU coreutils NEWS                                    -*- outline -*-
   md5sum --text correctly translates CRLF line endings with the MSYS2 runtime.
   This also applies to the sha*sum and b2sum utilities.
   [This bug was present in "the beginning".]
+
+  'numfmt' no longer drops custom suffixes from numbers it cannot fully parse.
+  [bug introduced with numfmt in coreutils-8.21]
 
   'timeout' will now propagate all terminating signals to the monitored command.
   Previously 'timeout' could have exited and left the monitored command running.
